# pyapp-messaging-aws

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  README.rst  docker-compose.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py
pyapp_ext/messaging_aws/: __init__.py
pyapp_ext/messaging_aws/aio/: __init__.py  error_handlers.py  sns.py  sqs.py  utils.py
sample/: __init__.py  __main__.py  default_settings.py
tests/: conftest.py
tests/aio/: test_sns.py  test_sqs.py  test_utils.py
