[metadata]
name = pyApp-Messaging-AWS
author = Tim Savage
author-email = tim@savage.company
description = pyApp Messaging Extension for AWS
long-description = file: README.rst
url = https://github.com/timsavage/pyapp-messaging-aws
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
    aws
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages =
    pyapp_ext.messaging_aws
    pyapp_ext.messaging_aws.aio
test_suite = tests
setup_requires =
    pytest-runner
    setuptools >=38.3
install_requires =
    pyapp-messaging >= 0.2
    pyapp-aiobotocore >= 2.0
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyapp.messaging.aws.aio = pyapp_ext.messaging_aws.aio:Extension

[options.extras_require]
dev =
    docutils
    black

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=pyapp_ext.messaging_aws

[check]
metadata = true
restructuredtext = true
strict = true
